--- a/Task_3/index.html
+++ b/Task_3/index.html
@@ -27,13 +27,23 @@
           <li>Element 3</li>
         </ul>
       </div>
-
-      <form action="" id="myForm">
+<!-- Tapşırıq 4 aşağıdakıdır -->
+      <!-- <form action="" id="myForm">
         <input type="text" name="" id="textInput">
         <button type="submit">submit</button>
       </form>
       <button id="button">Click </button>
       <p class="paragraph"></p>
+
+      <form action="">
+        <input class="depositInput" type="text" placeholder="deposit et">
+        <button class="depositBtn">mədaxil et</button>
+        <input class="withdrawInput" type="text" placeholder="withdraw et">
+        <button class="widtdrawBtn">məxaric et</button>
+      </form>
+      <div class="account"></div> -->
+
+
 
     <script src="main.js"></script>
 </body>
